--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "warp.css",
   "version": "2.0.0",
-  "description": "",
-  "main": "warp.css",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "A CSS library for applying commonly used styles quickly.",
+  "keywords": [
+    "CSS",
+    "CSS 3",
+    "Sass",
+    "scss"
+  ],
+  "homepage": "https://github.com/snsakib/warp.css",
+  "bugs": {
+    "url": "https://github.com/snsakib/warp.css/issues",
+    "email": "contact@snsakib.com"
   },
+  "main": "warp.css",
   "repository": {
     "type": "git",
     "url": "https://github.com/snsakib/warp.css.git"
   },
-  "author": "Syed Nazmus Sakib",
+  "author": "Syed Nazmus Sakib <contact@snsakib.com> (https://www.snsakib.com)",
   "license": "ISC"
 }
